--- a/src/index.css
+++ b/src/index.css
@@ -42,287 +42,286 @@ body {
   overflow-x: hidden;
 }
 
-@utility mask-clip-path {
+.mask-clip-path {
   clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
 }
-@utility sword-man-clip-path {
+.sword-man-clip-path {
   clip-path: polygon(16% 0, 89% 15%, 75% 100%, 0 97%);
 }
 
-@utility contact-clip-path-1 {
+.contact-clip-path-1 {
   clip-path: polygon(25% 0%, 74% 0, 69% 64%, 34% 73%);
 }
 
-@utility contact-clip-path-2 {
+.contact-clip-path-2 {
   clip-path: polygon(29% 15%, 85% 30%, 50% 100%, 10% 64%);
 }
 
-@utility border-hsla {
-    border: 1px solid rgba(255, 255, 255, 0.2);
-  }
+.border-hsla {
+  border: 1px solid rgba(255, 255, 255, 0.2);
+}
 
-  @utility nav-hover-btn {
-    position: relative;
-    margin-left: 2.5rem;
-    font-family: var(--font-general);
-    font-size: 0.75rem;
-    text-transform: uppercase;
-    color: var(--color-blue-50);
-    cursor: pointer;
-  }
-  @utility nav-hover-btn::after {
-    content: "";
-    position: absolute;
-    bottom: -0.125rem;
-    left: 0;
-    height: 2px;
-    width: 100%;
-    transform-origin: bottom right;
-    transform: scaleX(0);
-    background-color: rgb(38 38 38);
-    transition: transform 0.3s cubic-bezier(0.65, 0.05, 0.36, 1);
-  }
-  @utility nav-hover-btn:hover::after {
-    transform-origin: bottom left;
-    transform: scaleX(1);
-  }
-  @utility dark .nav-hover-btn::after {
-    background-color: white;
-  }
+.nav-hover-btn {
+  position: relative;
+  margin-left: 2.5rem;
+  font-family: var(--font-general);
+  font-size: 0.75rem;
+  text-transform: uppercase;
+  color: var(--color-blue-50);
+  cursor: pointer;
+}
+.nav-hover-btn::after {
+  content: "";
+  position: absolute;
+  bottom: -0.125rem;
+  left: 0;
+  height: 2px;
+  width: 100%;
+  transform-origin: bottom right;
+  transform: scaleX(0);
+  background-color: rgb(38 38 38);
+  transition: transform 0.3s cubic-bezier(0.65, 0.05, 0.36, 1);
+}
+.nav-hover-btn:hover::after {
+  transform-origin: bottom left;
+  transform: scaleX(1);
+}
+.dark .nav-hover-btn::after {
+  background-color: white;
+}
 
-  @utility floating-nav {
-    background-color: black;
-    border-radius: 0.5rem;
-    border: 1px solid;
-  }
+.floating-nav {
+  background-color: black;
+  border-radius: 0.5rem;
+  border: 1px solid;
+}
 
-  @utility absolute-center {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-  }
+ .absolute-center {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
 
-  @utility flex-center {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
+.flex-center {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 
-  @utility  mask-clip-path {
-    clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
-  }
+.mask-clip-path {
+  clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
+}
 
-  @utility special-font b {
-    font-family: "Zentry";
-    font-feature-settings: "ss01" on;
-  }
+.special-font b {
+  font-family: "Zentry";
+  font-feature-settings: "ss01" on;
+}
 
-  @utility hero-heading {
-    text-transform: uppercase;
-    font-family: var(--font-zentry);
-    font-weight: 600;
-    font-size: 3rem;
-    line-height: 1;
-    letter-spacing:-0.025em
-  }
-  @media (min-width: 640px) {
-    @utility hero-heading {
-      right: 2.5rem;
-      font-size: 4.5rem;
-    }
-  }
-  @media (min-width: 768px) {
-    @utility hero-heading {
-      font-size: 6rem;
-    }
-  }
-  @media (min-width: 1024px) {
-    @utility hero-heading {
-      font-size: 9rem;
-    }
-  }
-
-  .about-subtext {
-    position: absolute;
-    bottom: -80dvh;
-    left: 50%;
-    width: 100%;
-    max-width: 24rem;
-    transform: translateX(-50%);
-    text-align: center;
-    font-family: var(--font-circular-web);
-    font-size: 1.125rem;
-    line-height: 1.75rem;
-  }
-  @media (min-width: 768px) {
-    .about-subtext {
-      max-width: 34rem;
-    }
-  }
-
-  .about-image {
-    position: absolute;
-    left: 50%;
-    top: 0;
-    z-index: 20;
-    height: 60vh;
-    width: 24rem;
-    transform-origin: center;
-    transform: translateX(-50%);
-    overflow: hidden;
-    border-radius: 1.5rem;
-  }
-  @media (min-width: 768px) {
-    .about-image {
-      width: 30vw;
-    }
-  }
-
-  .animated-title {
-    display: flex;
-    flex-direction: column;
-    gap: 0.25rem;
+.hero-heading {
+  text-transform: uppercase;
+  font-family: var(--font-zentry);
+  font-weight: 600;
+  font-size: 3rem;
+  line-height: 1;
+  letter-spacing: -0.025em;
+}
+@media (min-width: 640px) {
+ .hero-heading {
+    right: 2.5rem;
     font-size: 4.5rem;
-    line-height: 1;
-    text-transform: uppercase;
-    color: white;
   }
-  @media (min-width: 640px) {
-    .animated-title {
-      padding-left: 8rem;
-      padding-right: 8rem;
-    }
+}
+@media (min-width: 768px) {
+  .hero-heading {
+    font-size: 6rem;
   }
-  @media (min-width: 768px) {
-    .animated-title {
-      font-size: 6rem;
-    }
+}
+@media (min-width: 1024px) {
+   .hero-heading {
+    font-size: 9rem;
   }
+}
 
-  .animated-word {
-    font-family: var(--font-zentry);
-    font-weight: 900;
-    opacity: 0;
-    transform: translate3d(10px, 51px, -60px) rotateY(60deg) rotateX(-40deg);
-    transform-origin: 50% 50% -150px !important;
-    will-change: opacity, transform;
+.about-subtext {
+  position: absolute;
+  bottom: -80dvh;
+  left: 50%;
+  width: 100%;
+  max-width: 24rem;
+  transform: translateX(-50%);
+  text-align: center;
+  font-family: var(--font-circular-web);
+  font-size: 1.125rem;
+  line-height: 1.75rem;
+}
+@media (min-width: 768px) {
+  .about-subtext {
+    max-width: 34rem;
   }
+}
 
-  .bento-tilt_1 {
-    position: relative;
-    border: 1px solid rgba(255, 255, 255, 0.2);
-    grid-column: span 2;
-    overflow: hidden;
-    border-radius: 0.375rem;
-    transition: transform 0.3s ease-out;
+.about-image {
+  position: absolute;
+  left: 50%;
+  top: 0;
+  z-index: 20;
+  height: 60vh;
+  width: 24rem;
+  transform-origin: center;
+  transform: translateX(-50%);
+  overflow: hidden;
+  border-radius: 1.5rem;
+}
+@media (min-width: 768px) {
+  .about-image {
+    width: 30vw;
   }
+}
 
-  .bento-tilt_2 {
-    position: relative;
-    grid-column: span 1;
-    grid-row: span 1;
-    overflow: hidden;
-    border-radius: 0.375rem;
-    transition: transform 0.3s ease-out;
+.animated-title {
+  display: flex;
+  flex-direction: column;
+  gap: 0.25rem;
+  font-size: 3rem;
+  line-height: 1;
+  text-transform: uppercase;
+  color: white;
+}
+@media (min-width: 640px) {
+  .animated-title {
+    padding-left: 5rem;
+    padding-right: 5rem;
   }
+}
+@media (min-width: 768px) {
+  .animated-title {
+    font-size: 5rem;
+  }
+}
 
+.animated-word {
+  font-family: var(--font-zentry);
+  font-weight: 900;
+  opacity: 0;
+  transform: translate3d(10px, 51px, -60px) rotateY(60deg) rotateX(-40deg);
+  transform-origin: 50% 50% -150px !important;
+  will-change: opacity, transform;
+}
+
+.bento-tilt_1 {
+  position: relative;
+  border: 1px solid rgba(255, 255, 255, 0.2);
+  grid-column: span 2;
+  overflow: hidden;
+  border-radius: 0.375rem;
+  transition: transform 0.3s ease-out;
+}
+
+.bento-tilt_2 {
+  position: relative;
+  grid-column: span 1;
+  grid-row: span 1;
+  overflow: hidden;
+  border-radius: 0.375rem;
+  transition: transform 0.3s ease-out;
+}
+
+.bento-title {
+  text-transform: uppercase;
+  font-size: 2.25rem;
+  line-height: 2.5rem;
+  font-weight: 900;
+  font-family: var(--font-zentry);
+}
+@media (min-width: 768px) {
   .bento-title {
-    text-transform: uppercase;
-    font-size: 2.25rem;
-    line-height: 2.5rem;
-    font-weight: 900;
-    font-family: var(--font-zentry);
+    font-size: 3.75rem;
+    line-height: 1;
   }
-  @media (min-width: 768px) {
-    .bento-title {
-      font-size: 3.75rem;
-      line-height: 1;
-    }
-  }
+}
 
+.story-img-container {
+  position: relative;
+  height: 90vh;
+  width: 100%;
+  filter: url("#flt_tag");
+}
+@media (min-width: 768px) {
   .story-img-container {
-    position: relative;
-    height: 90vh;
-    width: 100%;
-    filter: url("#flt_tag");
+    height: 100dvh;
   }
-  @media (min-width: 768px) {
-    .story-img-container {
-      height: 100dvh;
-    }
-  }
+}
 
+.story-img-mask {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  clip-path: polygon(4% 0, 83% 21%, 100% 73%, 0% 100%);
+}
+@media (min-width: 768px) {
   .story-img-mask {
-    position: absolute;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    overflow: hidden;
-    clip-path: polygon(4% 0, 83% 21%, 100% 73%, 0% 100%);
+    left: 20%;
+    top: -10%;
+    width: 80%;
+    height: 80%;
   }
-  @media (min-width: 768px) {
-    .story-img-mask {
-      left: 20%;
-      top: -10%;
-      width: 80%;
-      height: 80%;
-    }
-  }
+}
 
+.story-img-content {
+  position: absolute;
+  width: 100%;
+  height: 50dvh;
+  opacity: 1;
+  left: 2.5rem;
+  top: 4rem;
+  transform: translate3d(0, 0, 0) rotateX(0) rotateY(0) rotateZ(0) scale(1);
+}
+@media (min-width: 768px) {
   .story-img-content {
-    position: absolute;
-    width: 100%;
-    height: 50dvh;
-    opacity: 1;
-    left: 2.5rem;
-    top: 4rem;
-    transform: translate3d(0, 0, 0) rotateX(0) rotateY(0) rotateZ(0) scale(1);
+    height: 100dvh;
+    left: 0;
+    top: 2.5rem;
   }
-  @media (min-width: 768px) {
-    .story-img-content {
-      height: 100dvh;
-      left: 0;
-      top: 2.5rem;
-    }
+}
+@media (min-width: 1024px) {
+  .story-img-content {
+    left: -300px;
+    top: -100px;
   }
-  @media (min-width: 1024px) {
-    .story-img-content {
-      left: -300px;
-      top: -100px;
-    }
-  }
+}
 
-  .gallery-img-container {
-    width: 16rem;
-    height: 16rem;
-    overflow: hidden;
-    background-color: var(--color-violet-300);
-  }
+.gallery-img-container {
+  width: 16rem;
+  height: 16rem;
+  overflow: hidden;
+  background-color: var(--color-violet-300);
+}
 
-  .gallery-img {
-    width: 100%;
-    height: 100%;
-    background-size: cover;
-  }
+.gallery-img {
+  width: 100%;
+  height: 100%;
+  background-size: cover;
+}
 
+.gallery-img-4 {
+  border-radius: 0.5rem;
+}
+@media (min-width: 640px) {
   .gallery-img-4 {
-    border-radius: 0.5rem;
+    width: 20rem;
+    height: 20rem;
   }
-  @media (min-width: 640px) {
-    .gallery-img-4 {
-      width: 20rem;
-      height: 20rem;
-    }
+}
+@media (min-width: 768px) {
+  .gallery-img-4 {
+    height: 24rem;
+    width: 25rem;
   }
-  @media (min-width: 768px) {
-    .gallery-img-4 {
-      height: 24rem;
-      width: 25rem;
-    }
-  }
-
+}
 
 .indicator-line {
   height: 0.25rem;
